# pydexomizer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  format.md
src/pydexomizer/: __init__.py  basic.py  cli.py  container.py  proto.py  rawdec.py  sfx.py
tests/: conftest.py  test_basic.py  test_cli.py  test_container.py  test_errors.py  test_raw.py  test_sfx.py  test_units.py
